# PolyMatching

./: .gitignore  CMakeLists.txt  README.md
include/: binary_io.h  cgal_includes.h  command_line_parser.h  graph_computations.h  linear_program.h  localization.h  shapefile_io_operations.h  solution.h
input/auerberg/: auerberg_atkis.dbf  auerberg_atkis.shp  auerberg_atkis.shx  auerberg_osm.dbf  auerberg_osm.shp  auerberg_osm.shx
src/: binary_io.cpp  command_line_parser.cpp  graph_computations.cpp  linear_program.cpp  localization.cpp  main.cpp  shapefile_io_operations.cpp  solution.cpp
